[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/fontes/flappyfont.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Informações/pause.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="Theme" id=2]
Button/colors/font_color_focus = Color( 0.992157, 1, 0, 1 )
Button/colors/font_color_hover = Color( 0.992157, 1, 0, 1 )
Button/colors/font_color_pressed = Color( 1, 0.560784, 0, 1 )
Button/fonts/font = SubResource( 8 )
Button/styles/disabled = SubResource( 9 )
Button/styles/focus = SubResource( 10 )
Button/styles/hover = SubResource( 11 )
Button/styles/normal = SubResource( 12 )
Button/styles/pressed = SubResource( 13 )

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="InputEventAction" id=6]
action = "ui_cancel"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="DynamicFont" id=15]
size = 35
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=16]
default_font = SubResource( 15 )
CheckButton/fonts/font = SubResource( 15 )

[node name="Pausado" type="CanvasLayer"]
pause_mode = 2
visible = false
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.27451 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.5
margin_top = -86.5
margin_right = 205.5
margin_bottom = 86.5

[node name="Voltar" type="Button" parent="VBoxContainer"]
margin_right = 411.0
margin_bottom = 49.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
shortcut = SubResource( 7 )
text = "Voltar"

[node name="Resetar" type="Button" parent="VBoxContainer"]
margin_top = 53.0
margin_right = 411.0
margin_bottom = 102.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Resetar Recorde"

[node name="Fechar" type="Button" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 411.0
margin_bottom = 155.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Fechar o Jogo"

[node name="BMusica" type="CheckButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -212.0
margin_top = -47.0
theme = SubResource( 16 )
pressed = true
action_mode = 0
text = "Musica"
align = 2

[connection signal="pressed" from="VBoxContainer/Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="pressed" from="VBoxContainer/Resetar" to="." method="_on_Resetar_pressed"]
[connection signal="pressed" from="VBoxContainer/Fechar" to="." method="_on_Fechar_pressed"]
[connection signal="toggled" from="BMusica" to="." method="_on_BMusica_toggled"]
